--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,2 +1,19 @@
 # .gitignore
+
+# Node modules
+node_modules/
+
+# Build output
+build/
+
+# Environment variables
 .env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating system files
+.DS_Store
+Thumbs.db
